debugged security permisssions not working and added default admin